--- a/src/main/resources/templates/issue/index.html
+++ b/src/main/resources/templates/issue/index.html
@@ -20,9 +20,46 @@
 <section class="container">
     <h3 th:text="#{nav.issues}" class="pb-3"></h3>
 
+    <form th:action="@{/issue}" th:object="${filter}"
+          class="form-inline">
+
+        <select th:field="*{project}"
+                class="form-control"
+                onchange="this.form.submit()">
+            <option th:value="${null}" th:text="#{project.placeholder}">
+            </option>
+            <option th:each="project : ${projects}"
+                    th:value="${project.id}"
+                    th:text="${project.name}"></option>
+        </select>
+
+        <select th:field="*{assignee}"
+                class="form-control"
+                onchange="this.form.submit()">
+            <option th:value="${null}" th:text="#{assignee.placeholder}"></option>
+            <option th:each="person : ${people}"
+                    th:value="${person.id}"
+                    th:text="${person.name}"></option>
+        </select>
+
+        <select th:field="*{state}"
+                class="form-control"
+                onchange="this.form.submit()">
+            <option th:value="${null}" th:text="#{state.placeholder}"></option>
+            <option th:each="state : ${states}"
+                    th:value="${state}"
+                    th:text="${#messages.msg('state.' + state)}"></option>
+        </select>
+
+        <button class="btn btn-primary" type="submit" th:text="#{common.search}"></button>
+        <a th:href="@{/issue}" th:text="#{common.clear}" class="btn btn-default"></a>
+
+    </form>
+
     <div th:each="issue : ${issues}">
         <span th:text="${issue.id}"></span> |
         <span th:text="${issue.project.name}"></span> |
+        <span th:text="${issue.state}"></span> |
         <span th:text="${issue.title}"></span> |
         <span th:if="${issue.assignee != null}" th:text="${issue.assignee.name}"></span>
     </div>
